--- a/App1/Properties/launchSettings.json
+++ b/App1/Properties/launchSettings.json
@@ -1,10 +1,10 @@
 {
-  "profiles": {
-    "App1 (Package)": {
-      "commandName": "MsixPackage"
-    },
-    "App1 (Unpackaged)": {
-      "commandName": "Project"
+    "profiles": {
+        "WinUICalculator (Package)": {
+            "commandName": "MsixPackage"
+        },
+        "WinUICalculator (Unpackaged)": {
+            "commandName": "Project"
+        }
     }
-  }
 }
